--- a/dawnTheme/assets/style.css
+++ b/dawnTheme/assets/style.css
@@ -662,12 +662,32 @@ video {
   left: -400px;
 }
 
+.right-0{
+  right: 0px;
+}
+
+.left-\[-50\%\]{
+  left: -50%;
+}
+
+.left-\[-25\%\]{
+  left: -25%;
+}
+
 .isolate{
   isolation: isolate;
 }
 
 .z-0{
   z-index: 0;
+}
+
+.z-10{
+  z-index: 10;
+}
+
+.clear-both{
+  clear: both;
 }
 
 .my-20{
@@ -761,6 +781,42 @@ video {
   height: 28px;
 }
 
+.h-\[100px\]{
+  height: 100px;
+}
+
+.h-\[500px\]{
+  height: 500px;
+}
+
+.h-\[auto\]{
+  height: auto;
+}
+
+.h-\[20rem\]{
+  height: 20rem;
+}
+
+.h-\[50rem\]{
+  height: 50rem;
+}
+
+.h-\[700px\]{
+  height: 700px;
+}
+
+.h-\[70vw\]{
+  height: 70vw;
+}
+
+.h-\[600px\]{
+  height: 600px;
+}
+
+.h-\[40vw\]{
+  height: 40vw;
+}
+
 .w-full{
   width: 100%;
 }
@@ -818,6 +874,30 @@ video {
   width: 350px;
 }
 
+.w-\[300px\]{
+  width: 300px;
+}
+
+.w-\[\]{
+  width: ;
+}
+
+.w-\[50vw\]{
+  width: 50vw;
+}
+
+.w-\[50\%\]{
+  width: 50%;
+}
+
+.w-\[70\%\]{
+  width: 70%;
+}
+
+.w-\[70vw\]{
+  width: 70vw;
+}
+
 .max-w-4xl{
   max-width: 56rem;
 }
@@ -854,6 +934,10 @@ video {
   align-items: flex-start;
 }
 
+.items-end{
+  align-items: flex-end;
+}
+
 .items-center{
   align-items: center;
 }
@@ -862,8 +946,20 @@ video {
   justify-content: flex-start;
 }
 
+.justify-end{
+  justify-content: flex-end;
+}
+
 .justify-center{
   justify-content: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
+.justify-around{
+  justify-content: space-around;
 }
 
 .gap-\[100px\]{
@@ -892,6 +988,10 @@ video {
 
 .overflow-hidden{
   overflow: hidden;
+}
+
+.overflow-clip{
+  overflow: clip;
 }
 
 .truncate{
@@ -1028,6 +1128,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .pl-5{
   padding-left: 1.25rem;
 }
@@ -1088,6 +1193,10 @@ video {
   font-size: 1.6rem;
 }
 
+.text-\[40px\]{
+  font-size: 40px;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1100,6 +1209,10 @@ video {
   font-weight: 600;
 }
 
+.font-extrabold{
+  font-weight: 800;
+}
+
 .uppercase{
   text-transform: uppercase;
 }
@@ -1110,6 +1223,10 @@ video {
 
 .italic{
   font-style: italic;
+}
+
+.leading-tight{
+  line-height: 1.25;
 }
 
 .text-darkPurple{
@@ -1180,7 +1297,49 @@ video {
   background-color: rgb(67 56 202 / var(--tw-bg-opacity, 1));
 }
 
+@media (min-width: 640px){
+  .sm\:right-\[200px\]{
+    right: 200px;
+  }
+
+  .sm\:right-\[10vw\]{
+    right: 10vw;
+  }
+
+  .sm\:h-\[40vw\]{
+    height: 40vw;
+  }
+}
+
 @media (min-width: 768px){
+  .md\:right-0{
+    right: 0px;
+  }
+
+  .md\:right-\[25\%\]{
+    right: 25%;
+  }
+
+  .md\:right-\[25vw\]{
+    right: 25vw;
+  }
+
+  .md\:right-\[20vw\]{
+    right: 20vw;
+  }
+
+  .md\:right-\[60vw\]{
+    right: 60vw;
+  }
+
+  .md\:right-\[200px\]{
+    right: 200px;
+  }
+
+  .md\:h-\[40vw\]{
+    height: 40vw;
+  }
+
   .md\:w-\[400px\]{
     width: 400px;
   }
@@ -1203,6 +1362,14 @@ video {
 }
 
 @media (min-width: 1024px){
+  .lg\:right-0{
+    right: 0px;
+  }
+
+  .lg\:h-\[40vw\]{
+    height: 40vw;
+  }
+
   .lg\:w-\[500px\]{
     width: 500px;
   }
